[tool.poetry]
name = "pycalendly"
version = "0.1.0"
description = ""
authors = ["hkorzeniewski <hubert.korzeniewski@theengineers.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
black = "^23.11.0"
ruff = "^0.1.6"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
