[project]
name = "pycalendly"
version = "0.1.0"
authors = [
  { name="hubson", email="hubert.korzeniewski@theengineers.tech" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hkorzeniewski/pycalendly"
Issues = "https://github.com/hkorzeniewski/pycalendly/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
